--- a/app/views/users/top.html.haml
+++ b/app/views/users/top.html.haml
@@ -1,2 +1,2 @@
-= link_to 'チームを探したい', new_user_registration_path
-= link_to 'メンバーを探したい', new_user_registration_path
+= link_to 'チームを探したい', new_user_session_path
+= link_to 'メンバーを探したい', new_user_session_path
