--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -1,2 +1,3 @@
-= link_to 'チームを探したい', new_user_session_path
-= link_to 'メンバーを探したい', new_user_session_path
+トップページ
+= link_to 'ログイン', new_user_session_path
+= link_to '会員登録', new_user_registration_path
