--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -1,3 +1,8 @@
-トップページ
-= link_to 'ログイン', new_user_session_path
-= link_to '会員登録', new_user_registration_path
+%header
+  トップページ
+  = link_to 'ログイン', new_user_session_path
+  = link_to '会員登録', new_user_registration_path
+
+%main
+
+%footer
