--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -5,4 +5,28 @@
 header {
   background-color: greenyellow;
   height: 50px;
+  position: relative;       //ヘッダー内のリンクの配置を設定するために必要
+  .top_link {
+    width: 200px;
+    height: 1rem;
+
+    //トップページへのリンクを上下左右中央揃え
+    text-align: center;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    margin: auto;
+  }
+  .users_link {
+    height: 1rem;
+
+    //user関連のリンクを右寄せ、上下中央揃え
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+  }
 }
