--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -1,10 +1,13 @@
 %header
-  = link_to 'TakujinSearch', root_path
-  - if user_signed_in?
-    = link_to 'マイページ', user_path(:id)
-  - else
-    = link_to 'ログイン', new_user_session_path
-    = link_to '会員登録', new_user_registration_path
+  .top_link
+    = link_to 'TakujinSearch', root_path
+  
+  .users_link
+    - if user_signed_in?
+      = link_to 'マイページ', user_path(:id)
+    - else
+      = link_to 'ログイン', new_user_session_path
+      = link_to '会員登録', new_user_registration_path
 
 %main
 
