--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -30,5 +30,29 @@
       = link_to '会員登録', new_user_registration_path
 
 %main
+  .description
+    .position-relative.overflow-hidden.p-3.p-md-5.m-md-3.text-center.bg-light
+      %h1.display-4.font-weight-normal
+        卓人サーチ
+      %p.lead.font-weight-normal
+        説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん
+
+  .example
+    .d-md-flex.flex-md-equal.w-100.my-md-3.pl-md-3
+      .bg-dark.mr-md-3.pt-3.px-3.pt-md-5.px-md-5.text-center.text-white.overflow-hidden
+        .my-3.p-3
+          %h2.display-5
+            メンバーを探す
+          %p.lead
+            メンバーを探すメンバーを探すメンバーを探すメンバーを探す
+        .bg-light.shadow-sm.mx-auto{style: "width: 80%; height: 300px; border-radius: 21px 21px 0 0;"}
+
+      .bg-light.mr-md-3.pt-3.px-3.pt-md-5.px-md-5.text-center.overflow-hidden
+        .my-3.p-3
+          %h2.display-5
+            メンバーを探す
+          %p.lead
+            メンバーを探すメンバーを探すメンバーを探すメンバーを探す
+        .bg-dark.shadow-sm.mx-auto{style: "width: 80%; height: 300px; border-radius: 21px 21px 0 0;"}
 
 %footer
