--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,3 +1,13 @@
 マイページ
-= link_to 'logout', destroy_user_session_path, method: :delete
-= link_to 'edit', edit_user_registration_path
+.users_link
+  = link_to 'ログアウト', destroy_user_session_path, method: :delete
+  = link_to 'ユーザー情報の編集', edit_user_registration_path
+
+
+.for-search-team
+  = link_to 'プロフィールの編集', "#"
+  = link_to 'チームを探す', "#"
+
+.for-search-member
+  = link_to 'チーム情報の編集', "#"
+  = link_to 'メンバーを探す', "#"
