--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,13 +1,19 @@
 マイページ
-.users_link
-  = link_to 'ログアウト', destroy_user_session_path, method: :delete
-  = link_to 'ユーザー情報の編集', edit_user_registration_path
+%ul.users-link
+  %li
+    = link_to 'ログアウト', destroy_user_session_path, method: :delete
+  %li
+    = link_to 'ユーザー情報の編集', edit_user_registration_path
 
 
-.for-search-team
-  = link_to 'プロフィールの編集', "#"
-  = link_to 'チームを探す', "#"
+%ul.for-search-team
+  %li
+    = link_to 'プロフィールの編集', "#"
+  %li
+    = link_to 'チームを探す', "#"
 
-.for-search-member
-  = link_to 'チーム情報の編集', "#"
-  = link_to 'メンバーを探す', "#"
+%ul.for-search-member
+  %li
+    = link_to 'チーム情報の編集', "#"
+  %li
+    = link_to 'メンバーを探す', "#"
