--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -1,2 +1,53 @@
-members#show
-= @member.id
+.container.mt-5
+
+  %h2.text-center.rounded-pill.w-25.m-auto.border.border-secondary
+    メンバー詳細
+
+  %label.mt-4
+    名前
+  .card
+    .card-body
+      浦島太郎
+
+  %label.mt-4
+    経験年数
+  .card
+    .card-body
+      1000年
+
+  %label.mt-4
+    性別
+  .card
+    .card-body
+      男
+
+  %label.mt-4
+    地域
+  .card
+    .card-body
+      竜宮城
+
+  %label.mt-4
+    実績
+  .card
+    .card-body
+      亀を助けた
+
+  %label.mt-4
+    モチベーション
+  .card
+    .card-body
+      弱いものいじめを見過ごせない
+
+  %label.mt-4
+    希望活動回数
+  .card
+    .card-body
+      毎日
+
+  .card.mt-4
+    .card-header
+      一言コメント・自己紹介等
+    .card-body
+      %blockquote.blockquote.mb-0
+        %p 玉手箱を開けたことを後悔してます、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、、
