--- a/app/views/members/new.html.haml
+++ b/app/views/members/new.html.haml
@@ -1,5 +1,7 @@
-= form_for @member do |f|
+.container.p-5
 
-  = render 'members/form', f: f
+  = form_for @member do |f|
 
-  = f.submit 'プロフィールを作成'
+    = render 'members/form', f: f
+
+    = f.submit 'プロフィールを作成'
