membersの登録・修正フォームの修正

--- a/app/views/members/_form.html.haml
+++ b/app/views/members/_form.html.haml
@@ -2,7 +2,7 @@
   = f.label :searching, "チーム探し中？："
   = f.select :searching, [["はい", true], ["いいえ", false]], {},  {class: "custom-select mr-sm-2"}
 .form-group
-  = f.label :nickname, "コメント(自己PR、自己紹介等)："
+  = f.label :nickname, "ニックネーム："
   = f.text_field :nickname, class: "form-control"
 .form-group
   = f.label :gender, "性別："
