メンバー詳細へのリンクを設定

--- a/app/views/members/_member.html.haml
+++ b/app/views/members/_member.html.haml
@@ -38,4 +38,4 @@
           未設定
     
     - if user_signed_in?
-      = link_to '詳細を見る', '#', class: 'stretched-link'
+      = link_to '詳細を見る', member_path(member), class: 'stretched-link'
