トップページに設置するリンク

--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -42,7 +42,7 @@
       .bg-dark.mr-md-3.pt-3.px-3.pt-md-5.px-md-5.text-center.text-white.overflow-hidden
         .my-3.p-3
           %h2.display-5
-            メンバーを探す
+            = link_to 'メンバーを探す', members_path
           %p.lead
             メンバーを探すメンバーを探すメンバーを探すメンバーを探す
         .bg-light.shadow-sm.mx-auto{style: "width: 80%; height: 300px; border-radius: 21px 21px 0 0;"}
@@ -50,9 +50,9 @@
       .bg-light.mr-md-3.pt-3.px-3.pt-md-5.px-md-5.text-center.overflow-hidden
         .my-3.p-3
           %h2.display-5
-            メンバーを探す
+            = link_to 'チームを探す', teams_path
           %p.lead
-            メンバーを探すメンバーを探すメンバーを探すメンバーを探す
+            チームを探すチームを探すチームを探すチームを探すチームを探すチームを探す
         .bg-dark.shadow-sm.mx-auto{style: "width: 80%; height: 300px; border-radius: 21px 21px 0 0;"}
 
 %footer
