--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -8,12 +8,12 @@
 
 %ul.for-search-team
   %li
-    = link_to 'プロフィールの編集', "#"
+    = link_to 'プロフィールの編集', new_member_path
   %li
-    = link_to 'チームを探す', "#"
+    = link_to 'チームを探す', teams_path
 
 %ul.for-search-member
   %li
-    = link_to 'チーム情報の編集', "#"
+    = link_to 'チーム情報の編集', new_team_path
   %li
-    = link_to 'メンバーを探す', "#"
+    = link_to 'メンバーを探す', members_path
