--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -1,27 +1,44 @@
 %main
-  .description
-    .position-relative.overflow-hidden.p-3.p-md-5.m-md-3.text-center.bg-light
-      %h1.display-4.font-weight-normal
-        卓人サーチ
-      %p.lead.font-weight-normal
-        説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん
+  .container
 
-  .example
-    .d-md-flex.flex-md-equal.w-100.my-md-3.pl-md-3
-      .bg-dark.mr-md-3.pt-3.px-3.pt-md-5.px-md-5.text-center.text-white.overflow-hidden
-        .my-3.p-3
-          %h2.display-5
-            = link_to 'メンバーを探す', members_path
-          %p.lead
-            メンバーを探すメンバーを探すメンバーを探すメンバーを探す
-        .bg-light.shadow-sm.mx-auto{style: "width: 80%; height: 300px; border-radius: 21px 21px 0 0;"}
+    .description
+      .position-relative.overflow-hidden.p-3.p-md-5.my-md-3.text-center.shadow
+        %h1.display-4.font-weight-normal
+          卓人サーチ
+        %p.lead.font-weight-normal
+          説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん
 
-      .bg-light.mr-md-3.pt-3.px-3.pt-md-5.px-md-5.text-center.overflow-hidden
-        .my-3.p-3
-          %h2.display-5
-            = link_to 'チームを探す', teams_path
-          %p.lead
-            チームを探すチームを探すチームを探すチームを探すチームを探すチームを探す
-        .bg-dark.shadow-sm.mx-auto{style: "width: 80%; height: 300px; border-radius: 21px 21px 0 0;"}
+    .contents
+      .row
+        .col-sm
+          .card.mb-3.shadow
+            .card-header チームを探したい方へ
+            .card-body
+              %p.card-text 説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん
+              = link_to 'チームを探す', teams_path
+
+        .col-sm
+          .card.mb-3.shadow
+            .card-header メンバーを探したい方へ
+            .card-body
+              %p.card-text 説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん説明文せつめいぶん
+              = link_to 'メンバーを探す', members_path
+
+      -# .d-md-flex.flex-md-equal.w-100.my-md-3.pl-md-3
+      -#   .bg-dark.mr-md-3.pt-3.px-3.pt-md-5.px-md-5.text-center.text-white.overflow-hidden
+      -#     .my-3.p-3
+      -#       %h2.display-5
+      -#         = link_to 'メンバーを探す', members_path
+      -#       %p.lead
+      -#         メンバーを探すメンバーを探すメンバーを探すメンバーを探す
+      -#     .bg-light.shadow-sm.mx-auto{style: "width: 80%; height: 300px; border-radius: 21px 21px 0 0;"}
+
+      -#   .bg-light.mr-md-3.pt-3.px-3.pt-md-5.px-md-5.text-center.overflow-hidden
+      -#     .my-3.p-3
+      -#       %h2.display-5
+      -#         = link_to 'チームを探す', teams_path
+      -#       %p.lead
+      -#         チームを探すチームを探すチームを探すチームを探すチームを探すチームを探す
+      -#     .bg-dark.shadow-sm.mx-auto{style: "width: 80%; height: 300px; border-radius: 21px 21px 0 0;"}
 
 %footer
