--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -1,6 +1,12 @@
 %main
   .container
 
+    - if !user_signed_in?
+      .login-info.card.mt-3
+        .card-header テストアカウントへのログイン情報
+        .card-body
+          Email：t1@t1.com　　Password：111111
+
     .description
       .position-relative.overflow-hidden.p-3.p-md-5.my-md-3.text-center.shadow
         %h1.display-4.font-weight-normal
