--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 header {
-  background-color: greenyellow;
+  background-color: #e3f2fd;
   height: 50px;
   position: relative;       //ヘッダー内のリンクの配置を設定するために必要
   .top_link {
