--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,17 +1,4 @@
-//bootstrapを試してみたが、うまく行かないため、いったんコメントアウト
--# %header
--#   %nav.navbar.navbar-expand-lg.navbar-light.bg-light
--#     .center-block
--#       = link_to 'TakujinSearch', root_path
-    
--#     .right-block.pull-right
--#       - if user_signed_in?
--#         = link_to 'マイページ', user_path(:id)
--#       - else
--#         = link_to 'ログイン', new_user_session_path
--#         = link_to '会員登録', new_user_registration_path
-
-%header
+%header.shadow-sm.fixed-top
   .top_link
     = link_to 'TakujinSearch', root_path
   
