--- a/app/views/members/index.html.haml
+++ b/app/views/members/index.html.haml
@@ -1,16 +1,17 @@
-.container.p-5
+%main
+  .container.p-5
 
-  %h2.text-center.rounded-pill.w-50.m-auto.border.border-secondary
-    メンバーの検索条件
+    %h2.text-center.rounded-pill.w-50.m-auto.border.border-secondary
+      メンバーの検索条件
 
-  = form_with model: @member, url: members_path, method: "get", local: true, class: "mt-4" do |f|
+    = form_with model: @member, url: members_path, method: "get", local: true, class: "mt-4" do |f|
 
-    = render 'members/form-members-search', f: f
+      = render 'members/form-members-search', f: f
 
-    = f.submit 'チーム検索条件を設定'
+      = f.submit 'チーム検索条件を設定'
 
 
-.container
+  .container
 
-  - @members.each do |m|
-    = render 'member', member: m
+    - @members.each do |m|
+      = render 'member', member: m
