--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,19 +1,20 @@
-マイページ
-%ul.users-link
-  %li
-    = link_to 'ログアウト', destroy_user_session_path, method: :delete
-  %li
-    = link_to 'ユーザー情報の編集', edit_user_registration_path
+%main
+  マイページ
+  %ul.users-link
+    %li
+      = link_to 'ログアウト', destroy_user_session_path, method: :delete
+    %li
+      = link_to 'ユーザー情報の編集', edit_user_registration_path
 
 
-%ul.for-search-team
-  %li
-    = link_to 'プロフィールの編集', new_member_path
-  %li
-    = link_to 'チームを探す', teams_path
+  %ul.for-search-team
+    %li
+      = link_to 'プロフィールの編集', new_member_path
+    %li
+      = link_to 'チームを探す', teams_path
 
-%ul.for-search-member
-  %li
-    = link_to 'チーム情報の編集', new_team_path
-  %li
-    = link_to 'メンバーを探す', members_path
+  %ul.for-search-member
+    %li
+      = link_to 'チーム情報の編集', new_team_path
+    %li
+      = link_to 'メンバーを探す', members_path
