--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -12,13 +12,13 @@
         %h1.display-4.font-weight-normal
           卓人サーチ
         %p.lead.font-weight-normal
-          〜卓球プレーヤーと卓球チームを結びつけるマッチングサイトです〜
+          〜卓球プレーヤーと卓球チームを結びつけるマッチングサイト〜
 
     .contents
       .row
         .col-sm
           .card.mb-3.shadow
-            .card-header チームを探したい方へ
+            .card-header チームを探したい方はこちら
             .card-body
               %p.card-text どこかの卓球チームに所属していないと、練習相手や、一緒に試合に出る仲間を見つけるのは難しいです。
               %p.card-text 例えば、以下のような方の役に立ちます
@@ -36,7 +36,7 @@
 
         .col-sm
           .card.mb-3.shadow
-            .card-header メンバーを探したい方へ
+            .card-header メンバーを探したい方はこちら
             .card-body
               %p.card-text チームの雰囲気に合うメンバーになかなか巡り会えないチームもあるのではないでしょうか？
               %p.card-text 例えば、以下のようなチームにおすすめです
