メンバー関連の画面のラベル修正

--- a/app/views/members/_form-members-search.html.haml
+++ b/app/views/members/_form-members-search.html.haml
@@ -5,7 +5,7 @@
   = f.label :motivation, "モチベーション："
   = f.select :motivation, [["未選択", 0], ["運動不足解消", 1], ["たまに大会に出たい", 2], ["大会に出て、より上位を目指したい", 3]], {},  {class: "custom-select"}
 .form-group
-  = f.label :want_activity_times, "メンバーが希望している活動頻度："
+  = f.label :want_activity_times, "チームに望む活動頻度："
   = f.select :want_activity_times, [["未選択", 0], ["月に1回程度", 1], ["2週間に1回程度", 2], ["1週間に1回程度", 3], ["1週間に2回以上", 4]], {},  {class: "custom-select"}
 .form-group
   = f.label :area, "地域："
