--- a/app/views/members/_form.html.haml
+++ b/app/views/members/_form.html.haml
@@ -20,7 +20,7 @@
   = f.label :motivation, "モチベーション："
   = f.select :motivation, [["運動不足解消", 1], ["たまに大会に出たい", 2], ["大会に出て、より上位を目指したい", 3]], {},  {class: "custom-select mr-sm-2"}
 .form-group
-  = f.label :want_activity_times, "希望の活動頻度："
+  = f.label :want_activity_times, "チームに望む活動頻度："
   = f.select :want_activity_times, [["月に1回程度", 1], ["2週間に1回程度", 2], ["1週間に1回程度", 3], ["1週間に2回以上", 4]], {},  {class: "custom-select mr-sm-2"}
 .form-group
   = f.label :text, "コメント(自己PR、自己紹介等)："
