--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -77,7 +77,7 @@
           未設定
 
     %label.mt-4
-      希望活動回数
+      チームに望む活動頻度：
     .card
       .card-body
         - if @member.want_activity_times == 1
