マイページのリンクの表示を変更

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -9,12 +9,12 @@
 
   %ul.for-search-team
     %li
-      = link_to 'プロフィールの編集', new_member_path
+      = link_to 'プロフィール(メンバー情報)の登録・編集', new_member_path
     %li
       = link_to 'チームを探す', teams_path
 
   %ul.for-search-member
     %li
-      = link_to 'チーム情報の編集', new_team_path
+      = link_to 'チーム情報の登録・編集', new_team_path
     %li
       = link_to 'メンバーを探す', members_path
