--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -5,7 +5,10 @@
   .users_link
     - if user_signed_in?
       = link_to 'マイページ', user_path(:id)
+      |
+      = link_to 'ログアウト', destroy_user_session_path, method: :delete
     - else
       = link_to 'ログイン', new_user_session_path
+      |
       = link_to '会員登録', new_user_registration_path
 
