--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,10 +1,7 @@
 %main
-  マイページ
-  %ul.users-link
-    %li
-      = link_to 'ログアウト', destroy_user_session_path, method: :delete
-    %li
-      = link_to 'ユーザー情報の編集', edit_user_registration_path
+  %h1 マイページ
+  %p
+    = link_to 'ユーザー情報の編集', edit_user_registration_path
 
 
   %ul.for-search-team
