--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,8 +1,10 @@
 %main
-  %h1 マイページ
+  %h2
+    = current_user.name
+    さんのマイページ
+
   %p
     = link_to 'ユーザー情報の編集', edit_user_registration_path
-
 
   %ul.for-search-team
     %li
