modify team label

--- a/app/views/teams/show.html.haml
+++ b/app/views/teams/show.html.haml
@@ -46,7 +46,7 @@
         ※未実装
 
     %label.mt-4
-      新メンバーに欲しい性別
+      新メンバーに望む性別
     .card
       .card-body
         - if @team.want_gender == 1
@@ -57,7 +57,7 @@
           未設定
 
     %label.mt-4
-      新メンバーに欲しい経験年数
+      新メンバーに望む経験年数
     .card
       .card-body
         - if @team.want_experience_period == 1
@@ -74,7 +74,7 @@
           未設定
 
     %label.mt-4
-      新メンバーに欲しい実績
+      新メンバーに望む実績
     .card
       .card-body
         - if @team.want_performance == 1
