--- a/app/views/teams/index.html.haml
+++ b/app/views/teams/index.html.haml
@@ -1,7 +1,7 @@
 %main
   .container.p-5
 
-    = link_to 'チームの検索条件', '#form-teams-search', class: "btn btn-primary", 'data-toggle': :collapse, 'role': :button, 'aria-expanded': :false, 'aria-controls': :collapseExample
+    = link_to 'チームの検索条件を絞る', '#form-teams-search', class: "btn btn-info", 'data-toggle': :collapse, 'role': :button, 'aria-expanded': :false, 'aria-controls': :collapseExample
 
     .collapse#form-teams-search
 
