--- a/app/views/members/index.html.haml
+++ b/app/views/members/index.html.haml
@@ -1,14 +1,15 @@
 %main
   .container.p-5
 
-    %h2.text-center.rounded-pill.w-50.m-auto.border.border-secondary
-      メンバーの検索条件
+    = link_to 'メンバーの検索条件を絞る', '#form-teams-search', class: "btn btn-info", 'data-toggle': :collapse, 'role': :button, 'aria-expanded': :false, 'aria-controls': :collapseExample
 
-    = form_with model: @member, url: members_path, method: "get", local: true, class: "mt-4" do |f|
+    .collapse#form-teams-search
 
-      = render 'members/form-members-search', f: f
+      = form_with model: @member, url: members_path, method: "get", local: true, class: "mt-4" do |f|
 
-      = f.submit 'メンバー検索条件を設定'
+        = render 'members/form-members-search', f: f
+
+        = f.submit 'メンバー検索条件を設定'
 
 
   .container
