--- a/app/views/teams/_form-teams-search.html.haml
+++ b/app/views/teams/_form-teams-search.html.haml
@@ -1,21 +1,21 @@
 .form-group
   = f.label :searching, "メンバー募集中？："
-  = f.select :searching, [["未選択", 0], ["はい", true], ["いいえ", false]], {},  {class: "custom-select"}
+  = f.select :searching, [["未選択", 0], ["はい", true], ["いいえ", false]], {selected: params[:searching]},  {class: "custom-select"}
 .form-group
   = f.label :motivation, "モチベーション："
-  = f.select :motivation, [["未選択", 0], ["運動不足解消", 1], ["たまに大会に出たい", 2], ["大会に出て、より上位を目指したい", 3]], {},  {class: "custom-select"}
+  = f.select :motivation, [["未選択", 0], ["運動不足解消", 1], ["たまに大会に出たい", 2], ["大会に出て、より上位を目指したい", 3]], {selected: params[:motivation]},  {class: "custom-select"}
 .form-group
   = f.label :activity_times, "活動頻度："
-  = f.select :activity_times, [["未選択", 0], ["月に1回程度", 1], ["2週間に1回程度", 2], ["1週間に1回程度", 3], ["1週間に2回以上", 4]], {},  {class: "custom-select"}
+  = f.select :activity_times, [["未選択", 0], ["月に1回程度", 1], ["2週間に1回程度", 2], ["1週間に1回程度", 3], ["1週間に2回以上", 4]], {selected: params[:activity_times]},  {class: "custom-select"}
 .form-group
   = f.label :area, "地域："
-  = f.select :area, [["未選択", 0], ["大阪", 1], ["東京", 2]], {},  {class: "custom-select"}
+  = f.select :area, [["未選択", 0], ["大阪", 1], ["東京", 2]], {selected: params[:area]},  {class: "custom-select"}
 .form-group
   = f.label :want_gender, "新メンバーに望む性別："
-  = f.select :want_gender, [["未選択", 0], ["男", 1], ["女", 2]], {},  {class: "custom-select"}
+  = f.select :want_gender, [["未選択", 0], ["男", 1], ["女", 2]], {selected: params[:want_gender]},  {class: "custom-select"}
 .form-group
   = f.label :want_experience_period, "新メンバーに望む経験年数："
-  = f.select :want_experience_period, [["未選択", 0], ["1年未満", 1], ["1~3年", 2], ["3~6年", 3], ["6~10年", 4], ["10年以上", 5]], {},  {class: "custom-select"}
+  = f.select :want_experience_period, [["未選択", 0], ["1年未満", 1], ["1~3年", 2], ["3~6年", 3], ["6~10年", 4], ["10年以上", 5]], {selected: params[:want_experience_period]},  {class: "custom-select"}
 .form-group
   = f.label :want_performance, "新メンバーに望む実績："
-  = f.select :want_performance, [["未選択", 0], ["試合に出たことが無い", 1], ["ローカルの大会に出たら大体は真ん中より下", 2], ["ローカルの大会に出たら大体は真ん中くらい", 3], ["ローカルの大会に出たら大体は真ん中より上", 4], ["ローカルの大会で上位入賞経験あり", 5], ["全国大会出場経験あり", 6]], {},  {class: "custom-select"}
+  = f.select :want_performance, [["未選択", 0], ["試合に出たことが無い", 1], ["ローカルの大会に出たら大体は真ん中より下", 2], ["ローカルの大会に出たら大体は真ん中くらい", 3], ["ローカルの大会に出たら大体は真ん中より上", 4], ["ローカルの大会で上位入賞経験あり", 5], ["全国大会出場経験あり", 6]], {selected: params[:want_performance]},  {class: "custom-select"}
