--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -42,7 +42,10 @@
       地域
     .card
       .card-body
-        ※未実装
+        - if @member.area == 1
+          大阪
+        - elsif @member.area == 2
+          東京
 
     %label.mt-4
       実績
